--- a/LoginElSalto/App.config
+++ b/LoginElSalto/App.config
@@ -14,6 +14,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="El_SaltoEntities" connectionString="metadata=res://*/ModeloLogin.csdl|res://*/ModeloLogin.ssdl|res://*/ModeloLogin.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDUARDO\SQLEXPRESS;initial catalog=El_Salto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="loginEntities" connectionString="metadata=res://*/ModeloLogin.csdl|res://*/ModeloLogin.ssdl|res://*/ModeloLogin.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDUARDO\SQLEXPRESS;initial catalog=El_Salto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="loginEntities" connectionString="metadata=res://*/ModeloLogin.csdl|res://*/ModeloLogin.ssdl|res://*/ModeloLogin.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDUARDO\SQLEXPRESS;initial catalog=El_Salto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />	  
+		  <add name="PlantasEntities" connectionString="metadata=res://*/ModelPlantas.csdl|res://*/ModelPlantas.ssdl|res://*/ModelPlantas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDUARDO\SQLEXPRESS;initial catalog=El_Salto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />	  
   </connectionStrings>
 </configuration>
