--- a/PlantasGUI/App.config
+++ b/PlantasGUI/App.config
@@ -12,4 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="PlantasEntities" connectionString="metadata=res://*/ModelPlantas.csdl|res://*/ModelPlantas.ssdl|res://*/ModelPlantas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDUARDO\SQLEXPRESS;initial catalog=El_Salto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
