--- a/PlantasGUI/PlantasGUI.csproj
+++ b/PlantasGUI/PlantasGUI.csproj
@@ -105,6 +105,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PlantasNegocio\PlantasNegocio.csproj">
+      <Project>{662e6f30-c263-4a75-aa6b-436aaff8434b}</Project>
+      <Name>PlantasNegocio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
