--- a/PlantasGUI/PlantasGUI.csproj
+++ b/PlantasGUI/PlantasGUI.csproj
@@ -65,6 +65,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Views\AgregarPlanta.xaml.cs">
+      <DependentUpon>AgregarPlanta.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Validations\NombreCientificoCustomRule.cs" />
+    <Compile Include="Validations\NombreComunCustomRule.cs" />
+    <Compile Include="Validations\NotNullOrEmptyRule.cs" />
+    <Compile Include="Views\AgregarPlantas.xaml.cs">
+      <DependentUpon>AgregarPlantas.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -77,6 +86,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\AgregarPlanta.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AgregarPlantas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -111,6 +128,7 @@
       <Name>PlantasNegocio</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
