--- a/PlantasGUI/PlantasGUI.csproj
+++ b/PlantasGUI/PlantasGUI.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Views\AgregarPlantas.xaml.cs">
       <DependentUpon>AgregarPlantas.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ListarPlantas.xaml.cs">
+      <DependentUpon>ListarPlantas.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -91,6 +94,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AgregarPlantas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ListarPlantas.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
